[package]
name = "ham"
version = "0.1.0"
authors = ["Curtis Maves <curtismaves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spidev = "0.4.0"
gpio-cdev = "0.2.0"
nix = "0.17.0"
num-traits = "0.2.0"
num-derive = "0.3.0"
