[package]
name = "ham"
version = "0.1.0"
authors = ["Curtis Maves <curtismaves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["hp-sleep"]

hp-sleep = ["spin_sleep"]

[dependencies]
gpio-cdev = "0.2.0"
nix = "0.17.0"
num-derive = "0.3.0"
num-traits = "0.2.0"
reed-solomon = "0.2.1"
spidev = "0.4.0"
spin_sleep = { version = "0.3.7", optional = true }

[dev-dependencies]
rand = "0.7"



